# AlphaGo-knock-off

./: README.md  main.py  pyproject.toml  requirements.txt
config/: README.md  __init__.py  general.py  neural_network.py  parameters.py  reinforcement_learning.py
data/: README.md
game/: README.md  __init__.py
game/hex/: hex.py
game/nim/: nim.py
mcts/: README.md  __init__.py  mcts2.py  node.py  policy.py  search.py  tree.py
model/: README.md
models/5x5/04-19/model_0/: fingerprint.pb
models/5x5/04-19/model_2/: fingerprint.pb  saved_model.pb
models/5x5/04-19/model_3/: fingerprint.pb  keras_metadata.pb
models/5x5/04-19/model_4/: fingerprint.pb
models/5x5/04-20/model_0/: keras_metadata.pb  saved_model.pb
models/5x5/04-20/model_1/: saved_model.pb
models/5x5/04-20/model_2/: saved_model.pb
models/model_0/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_0/variables/: variables.data-00000-of-00001  variables.index
models/model_0_7x7/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_0_7x7/variables/: variables.data-00000-of-00001  variables.index
models/model_10/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_10/variables/: variables.data-00000-of-00001  variables.index
models/model_20_7x7/: fingerprint.pb  saved_model.pb
models/model_20_7x7/variables/: variables.data-00000-of-00001  variables.index
neural_network/: README.md  __init__.py  anet.py
reinforcement_learning/: README.md  actor.py  agent.py
topp/: README.md  __init__.py  tournament.py  tournement.py
utils/: README.md
(+34 files in other folders)
