[tool.poetry]
name = "alphago-knock-off"
version = "0.1.0"
description = ""
authors = ["Seran Shanmugathas <seran@live.no>"]
readme = "README.md"
packages = [{include = "alphago_knock_off"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
disjoint-set = "0.7.3"

[tool.poetry.dev-dependencies]
numpy = "^1.24.3"
pandas = "^2.0.2"
tensorflow = "^2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
